--- a/hollo2.html
+++ b/hollo2.html
@@ -4,7 +4,7 @@
         <title>Hollo</title>
     </head>
     <body>
-        <h1>Pakistan Zinda abad</h1>
+        <h1 style: color="blue;">Pakistan Zinda abad</h1>
         Pakistan Zinda abad!
     </body>
 </html>
